--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,11 @@ baseurl: ""
 email: hello@davecross.co.uk
 github_username:  davorg
 
-remote-theme: "mmistakes/minimal-mistakes"
+remote_theme: mmistakes/minimal-mistakes
 plugins:
-  - jekyll-feed
-  - jekyll-sitemap
-  - jekyll-seo-tag
   - jekyll-include-cache
   - jekyll-remote-theme
+  - jekyll-seo-tag
 
 # Minimal Mistakes Settings
 minimal_mistakes_skin: "default"
