--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,11 @@ kramdown:
   hard_wrap: false
   auto_ids: true
 
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-V6BJ2XKPNW"
+
 seo:
   canonical_url: https://modern-css.davecross.co.uk/
 
