--- a/_config.yml
+++ b/_config.yml
@@ -61,6 +61,9 @@ author:
 
 footer:
   links:
+    - label: "Made by Dave Cross"
+      icon: "fa-solid fa-user"
+      url: "https://links.davecross.co.uk/"
     - label: "GitHub"
       icon: "fab fa-github"
       url: "https://github.com/davorg/modern-css-daily"
