Fix(?) canonical link again

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: "Modern CSS Daily"
 description: "Learn one modern CSS feature each day."
-url: "https://modern-css.davecross.co.uk/"
+url: "https://modern-css.davecross.co.uk"
 baseurl: ""
 
 email: hello@davecross.co.uk
